// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation renders a navigation component with an active item 1`] = `
Array [
  <div
    className="hamburger-wrapper mobile only"
  >
    <button
      className="hamburger"
      onClick={[Function]}
      title="Open menu"
      type="button"
    >
      <span
        className="hamburger-box"
      >
        <span
          className="hamburger-inner"
        />
      </span>
    </button>
  </div>,
  <div
    className="ui pointing secondary stackable tablet computer large screen widescreen only menu"
    onClick={[Function]}
  >
    <a
      className="item active"
      onClick={[Function]}
      style={Object {}}
    >
      Blog
    </a>
    <a
      className="item"
      onClick={[Function]}
      style={Object {}}
    >
      Users
    </a>
  </div>,
]
`;

exports[`Navigation renders a navigation component with an active item when its subchildren are accessed 1`] = `
Array [
  <div
    className="hamburger-wrapper mobile only"
  >
    <button
      className="hamburger"
      onClick={[Function]}
      title="Open menu"
      type="button"
    >
      <span
        className="hamburger-box"
      >
        <span
          className="hamburger-inner"
        />
      </span>
    </button>
  </div>,
  <div
    className="ui pointing secondary stackable tablet computer large screen widescreen only menu"
    onClick={[Function]}
  >
    <a
      className="item active"
      onClick={[Function]}
      style={Object {}}
    >
      Blog
    </a>
    <a
      className="item"
      onClick={[Function]}
      style={Object {}}
    >
      Users
    </a>
  </div>,
]
`;

exports[`Navigation renders a navigation component with only one active item even if there are similar item names 1`] = `
Array [
  <div
    className="hamburger-wrapper mobile only"
  >
    <button
      className="hamburger"
      onClick={[Function]}
      title="Open menu"
      type="button"
    >
      <span
        className="hamburger-box"
      >
        <span
          className="hamburger-inner"
        />
      </span>
    </button>
  </div>,
  <div
    className="ui pointing secondary stackable tablet computer large screen widescreen only menu"
    onClick={[Function]}
  >
    <a
      className="item active"
      onClick={[Function]}
      style={Object {}}
    >
      Blog
    </a>
    <a
      className="item"
      onClick={[Function]}
      style={Object {}}
    >
      Blog of mine
    </a>
    <a
      className="item"
      onClick={[Function]}
      style={Object {}}
    >
      Users
    </a>
  </div>,
]
`;

exports[`Navigation renders a navigation component without active items 1`] = `
Array [
  <div
    className="hamburger-wrapper mobile only"
  >
    <button
      className="hamburger"
      onClick={[Function]}
      title="Open menu"
      type="button"
    >
      <span
        className="hamburger-box"
      >
        <span
          className="hamburger-inner"
        />
      </span>
    </button>
  </div>,
  <div
    className="ui pointing secondary stackable tablet computer large screen widescreen only menu"
    onClick={[Function]}
  >
    <a
      className="item"
      onClick={[Function]}
      style={Object {}}
    >
      Blog
    </a>
    <a
      className="item"
      onClick={[Function]}
      style={Object {}}
    >
      Users
    </a>
  </div>,
]
`;
